Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -619,10 +619,10 @@
 
   <footer class="footer">
     <p>Transformando el futuro empresarial con Inteligencia Artificial</p>
-    <p>
-      <a href="#">Política de Privacidad</a> • 
-      <a href="#">Términos de Servicio</a>
-    </p>
+  <p>
+   <a href="/aviso-legal">Aviso Legal</a> • 
+  <a href="/politica-privacidad">Política de Privacidad</a>
+  </p>
     <p>Contacto: <a href="mailto:alik@automizeai.es">alik@automizeai.es</a> • <a href="mailto:marc@automizeai.es">marc@automizeai.es</a></p>
     <p>&copy; 2025 AutomizeAI. Todos los derechos reservados.</p>
   </footer>
@@ -712,3 +712,4 @@
 
 </body>
 </html>
+
