--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 <body>
 
   <header>
-    <img src="/logo.png" alt="AutomizeAI" class="logo">
+    <img src="https://lh3.googleusercontent.com/d/1WbD9obfo9B3ZFvoqyWOFHDu4mOf77gDr=s0" alt="AutomizeAI" class="logo">
     
     <ul class="nav-links">
       <li><a href="#hero">Inicio</a></li>
@@ -712,6 +712,7 @@
 
 </body>
 </html>
+
 
 
 
