Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
+  <!-- ========== META TAGS PARA FAVICON Y REDES SOCIALES ========== -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <meta property="og:title" content="Automize AI - Automatización Inteligente">
+  <meta property="og:description" content="Transformamos tu negocio con soluciones de automatización avanzada e inteligencia artificial">
+  <meta property="og:image" content="https://automizeai.es/LOGO%20AUTOMIZEAI.jpeg">
+  <meta property="og:url" content="https://automizeai.es">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Automize AI">
+  <meta name="description" content="Automize AI - Soluciones de automatización inteligente para empresas. Transforma tu negocio con IA y automatización avanzada">
+  <!-- ========== FIN META TAGS ========== -->
+  
   <title>AutomizeAI — Automatización Empresarial Sin Código</title>
-  <meta name="description" content="Automatizamos tus procesos en 14 días. Sin programar. Resultados en euros.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -482,7 +493,7 @@
           </div>
         </div>
         <div class="testimonial-text">
-          “Automatizar la facturación fue un antes y un después. Lo que me tomaba 8 horas semanales ahora se hace solo.”
+          "Automatizar la facturación fue un antes y un después. Lo que me tomaba 8 horas semanales ahora se hace solo."
         </div>
         <div class="results-obtained">
           📉 Ahorro: 8h/semana → +1,280€/mes
@@ -498,7 +509,7 @@
           </div>
         </div>
         <div class="testimonial-text">
-          “El control de inventario en tiempo real eliminó los desabastecimientos. Nuestros clientes están mucho más satisfechos.”
+          "El control de inventario en tiempo real eliminó los desabastecimientos. Nuestros clientes están mucho más satisfechos."
         </div>
         <div class="results-obtained">
           📉 Ahorro: 15h/semana → +2,500€/mes
@@ -514,7 +525,7 @@
           </div>
         </div>
         <div class="testimonial-text">
-          “El chatbot atiende clientes 24/7. Hemos aumentado las ventas un 150% y yo duermo tranquila.”
+          "El chatbot atiende clientes 24/7. Hemos aumentado las ventas un 150% y yo duermo tranquila."
         </div>
         <div class="results-obtained">
           📈 +4,000€/mes en ventas
@@ -712,7 +723,3 @@
 
 </body>
 </html>
-
-
-
-
